# learn-agentic-ai

./: .gitignore  GitHub_Fork_Workflow.md  README.md  certification.md  comprehensive_guide_daca.md  journey.md
-01_lets_get_started/00_which_llm/: readme.md
-01_lets_get_started/02_prompts_by_examples/: readme.md
00_openai_agents/01_hello_agent/: hello_agent.ipynb
00_openai_agents/08_structured_output/: README.md  app.py  pyproject.toml
00a_openai_api/01_chat_completion_api/: readme.md
01_ai_agents_first/: .gitignore
01_ai_agents_first/01_uv/: readme.md
01_ai_agents_first/01_uv/02_packaged_application/my-packaged-app/: README.md  pyproject.toml
01_ai_agents_first/01_uv/02_packaged_application/my-packaged-app/src/my_packaged_app/: __init__.py  main.py
01_ai_agents_first/02_openrouter/: readme.md
01_ai_agents_first/02_what_is_api/: api_basics_demo.ipynb
01_ai_agents_first/03_get_api_key/: readme.md
01_ai_agents_first/03_litellm_openai_agent/: README.md
01_ai_agents_first/04.0_hello_agent/: OpenAI_agents_SDK_Hello_world.ipynb  readme.md
01_ai_agents_first/04.1_model_configuration/: Global,_Run_and_Agent_Level_Agents_SDK_Config.ipynb
01_ai_agents_first/04_hello_agent/: OpenAI_agents_SDK_Hello_world.ipynb  readme.md
01_ai_agents_first/05_agent_with_tools/: .env  .env_backup  README.md  main.py
01_ai_agents_first/05_model_configuration/: Global,_Run_and_Agent_Level_Agents_SDK_Config.ipynb  readme.md
01_ai_agents_first/06_basic_tools/: main.py  pyproject.toml
01_ai_agents_first/07_advanced_tools/: 02_tool_dynamic_permission.py
01_ai_agents_first/07_model_settings/: readme.md
01_ai_agents_first/08_local_context/: context_openai_agents_sdk.ipynb
01_ai_agents_first/09_agents_as_tool/: readme.md
01_ai_agents_first/09_dynamic_instructions/: readme.md
01_ai_agents_first/10_advanced_tools/: 02_tool_dynamic_permission.py  README.md
01_ai_agents_first/11_agent_clone/: readme.md
01_ai_agents_first/11_agents_as_tool/: readme.md
01_ai_agents_first/12_basic_tracing/: readme.md
01_ai_agents_first/12_handoffs/: 03_handoff_dynamic_permission.py
01_ai_agents_first/13_agents_as_tool/: README  README.md  agents_as_tools.ipynb  main.py  pyproject.toml
01_ai_agents_first/14_basic_handsoff/: hello.py  main.py  pyproject.toml  readme.md  whatsapp_copywriter_start_pattern.py
01_ai_agents_first/15_advanced_tools/: README.md
01_ai_agents_first/15_run_lifecycle/: README.md  run_lifecycle.ipynb
01_ai_agents_first/15_structured_output/: main.py  pyproject.toml  readme.md
01_ai_agents_first/16_advanced_handoffs/: readme.md
01_ai_agents_first/17_sesssion_memory/: readmd.md
01_ai_agents_first/17a_session_memory/: README.md  main.py  pyproject.toml
01_ai_agents_first/18_custom_runner/: 01_custom_runner.py
01_ai_agents_first/18_guardrails/: readme.md
01_ai_agents_first/19_agent_lifecycle/: README.md
01_ai_agents_first/20_run_lifecycle/: README.md
01_ai_agents_first/21_custom_runner/: README.md
01_ai_agents_first/21_sesssion_memory/: readme.md
01_ai_agents_first/22_context_engineering/: readme.md
01_ai_agents_first/24_python_missing_module/: 01_Agentic_AI_Traditional_Python_OOP_Objects_&_Classes.ipynb  02_Agentic_AI_Modern_Python_Principles_Pydantic_&_Generics.ipynb
01_ai_agents_first/26_basic_evaluating_agents/basic_eval/: .gitignore  01_basic_trace.py  02_tool_trace.py  03_custom_metadata.py  04_user_feedback.py  05_dataset_eval.py  README.md  pyproject.toml
01_ai_agents_first/26_external_tracing_and_basic_evals/basic_eval/: .env_backup  01_basic_trace.py  02_tool_trace.py  03_multi_agent_handsoff_trace.py  04_grouping_agent_runs_trace.py  05_custom_metadata.py  05_dataset_eval.py  06_llm_as_a_judge.md  07_human_annotation.md  README.md  prod_persistence.py  pyproject.toml
01_ai_agents_first/27_sessions_context_engineering/03_postgres_sessions/: .env_backup  README.md  main.py  pyproject.toml
01_ai_agents_first/29_managed_rag_service/: .env.example  README.md  main.py  prepare_vector_store.py  pyproject.toml
01_ai_agents_first/29_managed_rag_service/docs/: panaversity_faq.txt
01_openai_agents/17_daca_local_dev/01_uv_fastapi_pydantic/fastapi-daca-tutorial/: README.md  index.html  main.py  pydantic_examples.py  pyproject.toml
01_openai_agents/17_daca_local_dev/01_uv_fastapi_pydantic/fastapi-daca-tutorial/tests/: __init__.py
02b_applied_evals/: README.md
03_ai_protocols/: .gitignore  readme.md
03_ai_protocols/01_foundation_protocols/04_Streamable_HTTP/client-mini/: README.md  client.py  pyproject.toml
03_ai_protocols/01_foundation_protocols/04_Streamable_HTTP/server-mini/: README.md  main.py  pyproject.toml
03_ai_protocols/01_mcp/05_capabilities_and_transport/08_completions/mcp_completions_server/: client.py  pyproject.toml
04_building_effective_agents/: readme.md
04_design_patterns/: readme.md
05_agentic_web/: readme.md
05_daca_agent_native_dev/: readme.md
05a_agentic_web/: readme.md
05b_agentic_browsers/: readme.md
05c_agentic_org/: guide.md  readme.md
06_prompt_driven_development/: readme.md
06_spec_driven_vibe_coding/: readme.md
06a_agents_sdk/: README.md  pyproject.toml
06a_agents_sdk/src/agents_sdk/: __init__.py  guardrail.py  main.py  multi-agent.py
09_agent_discovery/: README.md
10_agent_discovery/: README.md
10_agent_to_agent/: README.md
11_authentication/: README.md
12_enterprise_features/: README.md
13_agentic_web/: readme.md
PROJECTS/: readme.md
xx_real_agentic_ai/: readme.md
(+927 files in other folders)
