[project]
name = "managed-rag-service"
version = "0.1.0"
description = "Managed RAG demo that uses OpenAI hosted vector stores"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agents>=0.7.0,<1.0.0",
    "chainlit>=1.1.0,<2.0.0",
    "openai>=1.50.0,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[tool.uv]
package = false
