[project]
name = "basic-eval"
version = "0.1.0"
description = "Basic agent evaluation with Langfuse and OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.1.0",
    "langfuse>=2.0.0",
    "pydantic-ai[logfire]>=0.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
