[project]
name = "basic-eval"
version = "0.2.0"
description = "Basic agent evaluation with Langfuse and OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "greenlet>=3.2.4",
    "langfuse>=3.6.1",
    "openai-agents>=0.3.3",
    "openinference-instrumentation-openai-agents>=1.3.0",
    "psycopg[binary]>=3.2.10",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
]
