[project]
name = "03-postgres-sessions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.3.3",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.2.10",
    "sqlalchemy>=2.0.44",
    "greenlet>=3.0.0",
    "python-dotenv>=1.0.0",
]
