[project]
name = "mcp-client-mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Junaid", email = "mr.junaidshaukat@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "httpx>=0.28.1",
]

[project.scripts]
mcp-client-mini = "mcp_client_mini:main"
