[project]
name = "mcp-completions-server"
version = "1.0.0"
description = "MCP Server demonstrating completions capability with client LLM integration"
authors = [
    {name = "MCP Demo Team", email = "demo@mcp.example.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"] 